updated core notebook greatly

--- a/if statements and data structures.ipynb
+++ b/if statements and data structures.ipynb
@@ -7,7 +7,7 @@
     "# Python Workshop 2\n",
     "\n",
     "## Table of Contents\n",
-    "* [Opening Spyder](#Opening-Spyder)\n",
+    "* [Opening Spyder](Opening Spyder.ipynb)\n",
     "* [The if statement](#The-if-statement)\n",
     "* [Common Python data structures](#Common-Python-data-structures)\n",
     " * [Tuples](#Tuples)\n",
@@ -26,14 +26,16 @@
     "\n",
     "One useful construct we didn't talk about last workshop is the <code>if</code> statement. The if statement lets you instruct Python to execute one piece of code if a condition is true and a different piece of code if the condition is false.\n",
     "\n",
-    "When programming, you'll often find you have a collection of related items like a collection of numbers describing the position of a particle over time or a collection of words making up a sentence. Because this occurs a lot, Python comes with datatypes for very general but useful ways you might want to aggregate data. The most common ones are Tuples, Lists, and Dictionaries. We'll cover the basics of all three."
+    "When programming, you'll often find you have a collection of related items like a collection of numbers describing the position of a particle over time or a collection of words making up a sentence. Because this occurs a lot, Python comes with datatypes for very general but useful ways you might want to aggregate data. The most common ones are Tuples, Lists, and Dictionaries. We'll cover the basics of all three.\n",
+    "\n",
+    "The first thing you should do is click the link [Opening Spyder](Opening Spyder.ipynb) so you can get set up."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The if statement\n",
+    "## The if statement\n",
     "<font size=\"1\">[Return to Table of Contents](#Table-of-Contents)</font>\n",
     "\n",
     "The <code>if</code> statement is an important part of the Python language for controlling your program's execution. It looks like this\n",
@@ -173,17 +175,198 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Common Python data structures\n",
+    "<font size=\"1\">[Return to Table of Contents](#Table-of-Contents)</font>\n",
+    "\n",
+    "Now we're going to switch gears and talk about common Python data structures. These data structures are ways to group together related pieces of data. You can think of them as containers for data. They can even contain each other, although it's simplest when you can avoid nesting them too deeply. Sometimes you can do something with more than one type of data structure, but the different data structures have different strengths and weaknesses. We'll start with the simplest data structure and move on to the most complicated.\n",
+    "\n",
+    "The three data structures we are going to talk about are Tuples, Lists, and Dictionaries.\n",
+    "\n",
+    "### Tuples\n",
+    "<font size=\"1\">[Return to Table of Contents](#Table-of-Contents)</font>\n",
+    "\n",
+    "Tuples are one of Python's many container data types. Tuples hold pieces of data, called *elements*. Elements can be in a variety of forms. Common choices for data are: strings, integers, floats, and bools.  \n",
+    "\n",
+    "You may have encountered tuples in Workshop 1 if you used string formatting to assign a variable to a portion of a printed string.\n",
+    "\n",
+    "For example, look at the code in the following cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello my name is Elliot I am 22 years old!\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_name = 'Elliot'\n",
+    "my_age = 22\n",
+    "\n",
+    "print('Hello my name is %s I am %i years old!' %(my_name, my_age))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above example, we are using a tuple containing the variables my_name and my_age as the elements to print specific data in my string. \n",
+    "\n",
+    "Tuples are made by wrapping left and right parenthesis around comma separated values or by calling the tuple() function on another container.\n",
+    "\n",
+    "Take a look at some examples below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4)\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#creating a tuple by wrapping elements in one set of parenthesis\n",
+    "simple_tuple = (1,2,3,4)\n",
+    "\n",
+    "#print statements will display my tuples on the screen\n",
+    "print(simple_tuple)\n",
+    "print(type(simple_tuple))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, we created a tuple called simple_tuple by placing some integers between one set of parenthesis. Notice that each integer is separated by a comma."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alyss', 'Scrappy', 'Monty', 'Cake']\n",
+      "('Alyss', 'Scrappy', 'Monty', 'Cake')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#a list of my pets names. Don't worry about what a list is at the moment. We'll talk about that next.\n",
+    "pets = ['Alyss', 'Scrappy', 'Monty', 'Cake']\n",
+    "\n",
+    "#creating a tuple called pet_tuple using tuple()\n",
+    "pet_tuple = tuple(pets)\n",
+    "\n",
+    "#print statements will display my tuples on the screen\n",
+    "print(pets)\n",
+    "print(pet_tuple)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case, we call the tuple() function that is built into Python to create a tuple called pet_tuple. Using the tuple() function is similar to how we might have changed integers into floats by using float() in Workshop 1.\n",
+    "\n",
+    "Notice that my data stayed the same, except now it is encapsulated by () instead of []."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('howdy', 67, 3.14159, False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#creating a tuple called mixed_tuple\n",
+    "mixed_tuple = ('howdy', 67, 3.14159, False)\n",
+    "\n",
+    "#print statements will display my tuples on the screen\n",
+    "print(mixed_tuple)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, we created a tuple called mixed_tuple by surrounding a set of comma separated elements with parenthesis. However, the elements of the tuple each have different data types.\n",
+    "\n",
+    "Tuples can handle elements with different data types.\n",
+    "\n",
+    "Tuples are like numpy arrays in that you can retrieve elements of a tuple by indexing with square brackets. You can also take slices of tuples. Taking a slice of a tuple will return another tuple that starts at the first index and ends just before the second index of the slice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first element of mixed_tuple is howdy\n",
+      "The second element of mixed_tuple is 67\n",
+      "The last element of mixed_tuple is False\n",
+      "The middle two elements of mixed_tuple are (67, 3.14159)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The first element of mixed_tuple is', mixed_tuple[0])\n",
+    "print('The second element of mixed_tuple is', mixed_tuple[1])\n",
+    "print('The last element of mixed_tuple is', mixed_tuple[-1])\n",
+    "print('The middle two elements of mixed_tuple are', mixed_tuple[1:3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once you've created a tuple, you can't change any element inside it without overwriting the entire tuple. This property is called immutability. So other than indexing into tuples, you don't do much with them after creation. For this reason, tuples are useful for packing together a few related pieces of data of any types that you want to stay unchanged.\n",
+    "\n",
+    "Since you can't manipulate tuples after making them, you'll be practicing indexing into nested tuples. Complete the exercise \"tuple_indexing.py\" in Spyder."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lists\n",
     "<font size=\"1\">[Return to Table of Contents](#Table-of-Contents)</font>\n",
     "\n",
-    "Lists are another important container for holding data in Python. Lists work a lot like tuples in that they are an ordered collection of data and you can pull an item from a list by indexing. However, they differ from tuples in that you can change the elements of a list or add new elements to the end of a list.\n",
+    "Lists are another important container for holding data in Python. Lists work a lot like tuples in that they are an ordered collection of data and you can pull an item from a list by indexing. However, they differ from tuples in that you can change the elements of a list or add new elements to a list.\n",
     "\n",
     "You make a list by enclosing the data to be put into the list in brackets, separating the different pieces of data by commas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +643,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-5f6d8cb8e449>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplanet_masses\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-19-0ad5ae0f9bf7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplanet_masses\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m: 0"
      ]
     }
@@ -488,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -553,12 +736,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dictionaries also can be used with <code>for</code> loops. For loops for dictionaries will loop over the keys of the dictionary."
+    "Like lists, dictionaries can be used with <code>for</code> loops. <code>for</code> loops for dictionaries will loop over the keys of the dictionary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -582,9 +765,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to loop over the values of a dictionary, that's possible too. <code>my_dictionary.values()</code> will return the values of a dictionary in a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.815\n",
+      "1.0\n",
+      "0.11\n",
+      "317.8\n",
+      "95.2\n",
+      "14.6\n",
+      "17.2\n",
+      "0.0553\n"
+     ]
+    }
+   ],
+   "source": [
+    "for mass in planet_masses.values():\n",
+    "    print(mass)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And if you want to loop over keys and values, <code>my_dictionary.items()</code> will return a list of key, value pairs which you can unpack into key and value elements of a loop like so"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mass of Venus is 0.815 earth masses.\n",
+      "The mass of Earth is 1.0 earth masses.\n",
+      "The mass of Mars is 0.11 earth masses.\n",
+      "The mass of Jupiter is 317.8 earth masses.\n",
+      "The mass of Saturn is 95.2 earth masses.\n",
+      "The mass of Uranus is 14.6 earth masses.\n",
+      "The mass of Neptune is 17.2 earth masses.\n",
+      "The mass of Mercury is 0.0553 earth masses.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for planet, mass in planet_masses.items():\n",
+    "    print ('The mass of', planet, 'is', mass, 'earth masses.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For your exercise about dictionaries. You'll be completing the code in \"tuningfork.py\". We've written the code to load some data from the \"materials-youngs modulus-densities.csv\" file into a dictionary. You need to use that data to determine when made into a tuning fork, which material would resonate at the highest frequency."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -605,7 +861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
