clarified a few things. Added a little bit of advice on coding style

--- a/if statements and data structures.ipynb
+++ b/if statements and data structures.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "One useful construct we didn't talk about last workshop is the <code>if</code> statement. The if statement lets you instruct Python to execute one piece of code if a condition is true and a different piece of code if the condition is false.\n",
     "\n",
-    "When programming, you'll often find you have a collection of related items like a collection of numbers describing the position of a particle over time or a collection of words making up a sentence. Because this occurs a lot, Python comes with datatypes for very general but useful ways you might want to aggregate data. The most common ones are Tuples, Lists, and Dictionaries. We'll cover the basics of all three.\n",
+    "When programming, you'll often find you have a collection of related items like a collection of numbers describing the position of a particle over time or a collection of words making up a sentence. Because this occurs a lot, Python comes with data structures for very general but useful ways you might want to aggregate data. The most common ones are Tuples, Lists, and Dictionaries. We'll cover the basics of all three.\n",
     "\n",
     "The first thing you should do is click the link [Opening Spyder](Opening Spyder.ipynb) so you can get set up."
    ]
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sometimes, you'll want to check multiple exclusive conditions. To do this Python has the <code>elif<code> statement. <code>elif</code> is short for \"else if\". If an <code>if</code> statement turns out not to be true, then Python will check the <elif> statment after it. If that elif statement isn't true, then it will check the next <code>elif</code> statement and so on. Once a statement evaluates to True, no further statements will be checked."
+    "Sometimes, you'll want to check multiple exclusive conditions. To do this Python has the <code>elif</code> statement. <code>elif</code> is short for \"else if\". If an <code>if</code> statement turns out not to be true, then Python will check the <code>elif</code> statment after it. If that elif statement isn't true, then it will check the next <code>elif</code> statement and so on. Once a statement evaluates to True, no further statements will be checked."
    ]
   },
   {
@@ -209,7 +209,8 @@
     "my_name = 'Elliot'\n",
     "my_age = 22\n",
     "\n",
-    "print('Hello my name is %s I am %i years old!' %(my_name, my_age))"
+    "print('Hello my name is %s I am %i years old!' %(my_name, my_age)) # %s means to substitue a variable in as a string,\n",
+    "                                                                   # %i means as an integer"
    ]
   },
   {
@@ -305,7 +306,7 @@
     "#creating a tuple called mixed_tuple\n",
     "mixed_tuple = ('howdy', 67, 3.14159, False)\n",
     "\n",
-    "#print statements will display my tuples on the screen\n",
+    "#print statements will display mixed_tuple on the screen\n",
     "print(mixed_tuple)"
    ]
   },
@@ -337,9 +338,9 @@
     }
    ],
    "source": [
-    "print('The first element of mixed_tuple is', mixed_tuple[0])\n",
-    "print('The second element of mixed_tuple is', mixed_tuple[1])\n",
-    "print('The last element of mixed_tuple is', mixed_tuple[-1])\n",
+    "print('The first element of mixed_tuple is', mixed_tuple[0]) # Python starts indexing at 0. 0 is the first element\n",
+    "print('The second element of mixed_tuple is', mixed_tuple[1]) # That means 1 is the second element\n",
+    "print('The last element of mixed_tuple is', mixed_tuple[-1]) # -1 is the last element, -2 the second to last element and so on\n",
     "print('The middle two elements of mixed_tuple are', mixed_tuple[1:3])"
    ]
   },
@@ -347,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once you've created a tuple, you can't change any element inside it without overwriting the entire tuple. This property is called immutability. So other than indexing into tuples, you don't do much with them after creation. For this reason, tuples are useful for packing together a few related pieces of data of any types that you want to stay unchanged.\n",
+    "Once you've created a tuple, you can't change any element inside it without overwriting the entire tuple. This property is called immutability. So other than using them as inputs into other pieces of code or indexing into tuples, you don't do much with them after creation. For this reason, tuples are useful for packing together a few related pieces of data of any types that you want to stay unchanged.\n",
     "\n",
     "Since you can't manipulate tuples after making them, you'll be practicing indexing into nested tuples. Complete the exercise \"tuple_indexing.py\" in Spyder."
    ]
@@ -359,9 +360,9 @@
     "### Lists\n",
     "<font size=\"1\">[Return to Table of Contents](#Table-of-Contents)</font>\n",
     "\n",
-    "Lists are another important container for holding data in Python. Lists work a lot like tuples in that they are an ordered collection of data and you can pull an item from a list by indexing. However, they differ from tuples in that you can change the elements of a list or add new elements to a list.\n",
+    "Lists are another important container for holding data in Python. Lists work a lot like tuples in that they are an ordered collection of data and you can pull an item from a list by indexing. However, they differ from tuples in that you can change the elements of a list, add new elements to a list, or remove elements from a list.\n",
     "\n",
-    "You make a list by enclosing the data to be put into the list in brackets, separating the different pieces of data by commas."
+    "You make a list by enclosing the data to be put into the list in straight brackets, separating the different pieces of data by commas."
    ]
   },
   {
@@ -388,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can access single elements of a list the same way you access elements of a tuple. However, you can also access multiple elements of a list using the same syntax used for arrays that you used in workshop 1."
+    "You can access single elements of a list the same way you access elements of a tuple. You can also access multiple elements of a list using the same slicing syntax used for tuples or for arrays that you used in workshop 1."
    ]
   },
   {
@@ -410,7 +411,7 @@
     "print('The first element of my_list is', my_list[0])\n",
     "print('The last element of my_list is', my_list[-1])\n",
     "print('The middle elements of my_list are', my_list[1:4]) # the number before the colon is where you start\n",
-    "# you stop before the number after the colon"
+    "                                                          # you stop before the number after the colon"
    ]
   },
   {
@@ -713,7 +714,7 @@
    ],
    "source": [
     "planet_masses['Mercury'] = .0553\n",
-    "print(planet_masses['Mercury'])\n",
+    "print('The mass of Mercury is', planet_masses['Mercury'])\n",
     "planet_masses.pop('Pluto') # Pluto is not a planet anymore. Remove it from the dictionary.\n",
     "print(\"Earth is\", planet_masses['Earth'], 'earth masses.')\n",
     "print(\"That's not right...\")\n",
@@ -833,6 +834,40 @@
    "metadata": {},
    "source": [
     "For your exercise about dictionaries. You'll be completing the code in \"tuningfork.py\". We've written the code to load some data from the \"materials-youngs modulus-densities.csv\" file into a dictionary. You need to use that data to determine when made into a tuning fork, which material would resonate at the highest frequency."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Good coding style\n",
+    "<font size=\"1\">[Return to Table of Contents](#Table-of-Contents)</font>\n",
+    "\n",
+    "Finally, let's cover/emphasize some basic tips on good coding style.\n",
+    "\n",
+    "First, let's put it in terms of what *not* to do.\n",
+    "\n",
+    "### How *not* to code\n",
+    "* Neglect to think about the problem first.\n",
+    "* Don't read error messages.\n",
+    "* Reuse variable names in the same scope.\n",
+    "* Deeply nest control flow.\n",
+    "* Don't write functions.\n",
+    "* Choose names for variables poorly.\n",
+    "* Group together unrelated data.\n",
+    "* Don't comment your code.\n",
+    "\n",
+    "### How to code\n",
+    "* Think about the problem before you start coding.\n",
+    "* Read every error message.\n",
+    "* Make sure variables have unique names.\n",
+    "* Keep nesting down to 2 levels when possible.\n",
+    "* Write lots of functions.\n",
+    "* Give your variables meaningful and explanatory names.\n",
+    "* Group together related data.\n",
+    "* Comment your code."
    ]
   },
   {
