rewrote some advice slightly

--- a/if statements and data structures.ipynb
+++ b/if statements and data structures.ipynb
@@ -847,7 +847,7 @@
     "\n",
     "Finally, let's cover/emphasize some basic tips on good coding style.\n",
     "\n",
-    "First, let's put it in terms of what *not* to do.\n",
+    "First, let's put it in terms of what you shouldn't do.\n",
     "\n",
     "### How *not* to code\n",
     "* Neglect to think about the problem first.\n",
@@ -867,7 +867,9 @@
     "* Write lots of functions.\n",
     "* Give your variables meaningful and explanatory names.\n",
     "* Group together related data.\n",
-    "* Comment your code."
+    "* Comment your code.\n",
+    "\n",
+    "I've personally made all the mistakes on the first list and will make them again. But it's important to try to keep up good practices."
    ]
   },
   {
